* Change log
** [Unrealeased] [2016-11-11]
*** Changed
- Added the /hello/:messenger to the path to display custom messages 
- Added the hello phoenix page.
- Changed the user name and password in dev.exs by Andrew