@@ -1,0 +1,19 @@
+defmodule Pxblog.Posts do
+  use Pxblog.Web, :model
+
+  schema "posts" do
+    field :title, :string
+    field :body, :string
+
+    timestamps()
+  end
+
+  @doc """
+  Builds a changeset based on the `struct` and `params`.
+  """
+  def changeset(struct, params \\ %{}) do
+    struct
+    |> cast(params, [:title, :body])
+    |> validate_required([:title, :body])
+  end
+end
