@@ -19,6 +19,7 @@ defmodule Pxblog.Router do
     get "/", PageController, :index
     get "/hello", HelloController, :index
     get "/hello/:messenger", HelloController, :show
+    resources "/posts", PostsController
   end
 
   # Other scopes may use custom stacks.
