@@ -1,0 +1,6 @@
+<h2>New posts</h2>
+
+<%= render "form.html", changeset: @changeset,
+                        action: posts_path(@conn, :create) %>
+
+<%= link "Back", to: posts_path(@conn, :index) %>
