@@ -1,0 +1,3 @@
+defmodule Pxblog.PostsView do
+  use Pxblog.Web, :view
+end
